// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard — dark theme full 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#1E1B18",
        "borderColor": "#322D29",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 1,
        "flex": 1,
        "opacity": 1,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3A2419",
          "height": 260,
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 120,
              "width": 120,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#3A2419",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#FF8560",
              },
              {
                "fontSize": 48,
                "lineHeight": 60,
              },
            ]
          }
        >
          M
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#F5F2ED",
            },
            undefined,
          ]
        }
      >
        Maya, 27
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#A3A5A5",
            },
            undefined,
          ]
        }
      >
        2 km away
      </Text>
      <Text
        numberOfLines={3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 22,
            },
            {
              "color": "#A3A5A5",
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        Weekend hiker, terrible cook, always up for a quiz night.
      </Text>
      <View
        style={
          {
            "marginTop": 4,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 22,
              },
              {
                "color": "#A3A5A5",
              },
              undefined,
            ]
          }
        >
          Hiking · Board games · Coffee · Film
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ProfileCard — dark theme grid 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#1E1B18",
        "borderColor": "#322D29",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 1,
        "flex": 1,
        "opacity": 1,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3A2419",
          "height": 150,
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 64,
              "width": 64,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#3A2419",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#FF8560",
              },
              {
                "fontSize": 25.6,
                "lineHeight": 32,
              },
            ]
          }
        >
          M
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "height": 102,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#F5F2ED",
            },
            undefined,
          ]
        }
      >
        Maya, 27
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#A3A5A5",
            },
            undefined,
          ]
        }
      >
        2 km away
      </Text>
      <View
        style={
          {
            "marginTop": 4,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 22,
              },
              {
                "color": "#A3A5A5",
              },
              undefined,
            ]
          }
        >
          Hiking · Board games
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ProfileCard — light theme full 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E6E2DD",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 1,
        "flex": 1,
        "opacity": 1,
        "overflow": "hidden",
        "shadowColor": "#1A1815",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FCE9E2",
          "height": 260,
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 120,
              "width": 120,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#FCE9E2",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#F2724B",
              },
              {
                "fontSize": 48,
                "lineHeight": 60,
              },
            ]
          }
        >
          M
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#1A1815",
            },
            undefined,
          ]
        }
      >
        Maya, 27
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#686B6B",
            },
            undefined,
          ]
        }
      >
        2 km away
      </Text>
      <Text
        numberOfLines={3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 22,
            },
            {
              "color": "#686B6B",
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        Weekend hiker, terrible cook, always up for a quiz night.
      </Text>
      <View
        style={
          {
            "marginTop": 4,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 22,
              },
              {
                "color": "#686B6B",
              },
              undefined,
            ]
          }
        >
          Hiking · Board games · Coffee · Film
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ProfileCard — light theme grid 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E6E2DD",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 1,
        "flex": 1,
        "opacity": 1,
        "overflow": "hidden",
        "shadowColor": "#1A1815",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FCE9E2",
          "height": 150,
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Maya's avatar"
        accessibilityRole="image"
        accessible={true}
        style={
          [
            {
              "borderRadius": 999,
              "height": 64,
              "width": 64,
            },
            {
              "alignItems": "center",
              "backgroundColor": "#FCE9E2",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#F2724B",
              },
              {
                "fontSize": 25.6,
                "lineHeight": 32,
              },
            ]
          }
        >
          M
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "height": 102,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Inter-SemiBold",
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#1A1815",
            },
            undefined,
          ]
        }
      >
        Maya, 27
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#686B6B",
            },
            undefined,
          ]
        }
      >
        2 km away
      </Text>
      <View
        style={
          {
            "marginTop": 4,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 22,
              },
              {
                "color": "#686B6B",
              },
              undefined,
            ]
          }
        >
          Hiking · Board games
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
